--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,16 @@
 body {
   margin: 0;
+  background-color: rgb(44, 92, 94);
+  color: rgb(208, 233, 233);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+a{
+  text-decoration: none;
 }
 
 code {
